Add hover and active effects on main page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         </div>
         <ul class="header-user-buttons__list">
           <li class="header-user-buttons__item">
-            <img class="header-user-buttons__login-icon" src="img/icons/icon-login.svg" alt="Иконка входа">
             <a class="user-button login" href="">Войти</a>
           </li>
           <li class="header-user-buttons__item">
@@ -83,6 +82,7 @@
       <section class="features">
         <h2 class="hidden-title">Услуги и акции</h2>
         <div class="features__item features__material">
+          <div class="features__new">NEW</div>
           <h3 class="features__title">Материалы</h3>
           <a class="features__link" href="#">На любой вкус</a>
           <img class="features__img" src="img/icons/icon-1.svg" alt="">
@@ -103,12 +103,12 @@
               <h3 class="slider__title">Перфораторы</h3>
               <p class="slider__text">Настоящие мужские игрушки</p>
             </div>
-            <a class="opening-button slider-button" href="#">Открыть каталог</a>
+            <a class="opening-button slider-button" href="catalog.html">Открыть каталог</a>
           </div>
           <!--        <div class="slider__item drill">-->
           <!--          <h3 class="slider__title">Дрели</h3>-->
           <!--          <p class="slider__text">Соседям на радость!</p>-->
-          <!--          <a class="slider__link" href="#">Открыть каталог</a>-->
+          <!--          <a class="slider__link" href="catalog.html">Открыть каталог</a>-->
           <!--          <img src="img/drill.jpg" width="620" height="266" alt="">-->
           <!--        </div>-->
         </div>
@@ -127,7 +127,7 @@
       <section class="popular-products">
         <div class="section-start">
           <h2 class="section-title">Популярные товары:</h2>
-          <a class="opening-button section-button" href="#">Все популярные товары</a>
+          <a class="opening-button section-button" href="catalog.html">Все популярные товары</a>
         </div>
         <ul class="popular-products__list">
           <li class="popular-products__item">
@@ -168,7 +168,7 @@
       <section class="popular-brand">
         <div class="section-start">
           <h2 class="section-title">Популярные производители:</h2>
-          <a class="opening-button  section-button" href="#">Все производители</a>
+          <a class="opening-button  section-button" href="catalog.html">Все производители</a>
         </div>
         <div class="popular-brand__list">
           <div class="popular-brand__item">
