--- a/index.html
+++ b/index.html
@@ -198,21 +198,25 @@
         </div>
       </section>
     </div>
+
     <section class="services">
-      <div class="container">
+      <div class="services__container container">
         <h2 class="section-title dark">Сервисы</h2>
         <p class="section-description">
           Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
         <div class="services__options">
-          <ul class="services__list">
-            <li class="services__item"><a class="services__link" href="#">Доставка</a></li>
-            <li class="services__item"><a class="services__link" href="#">Гарантия</a></li>
-            <li class="services__item"><a class="services__link" href="#">Кредит</a></li>
-          </ul>
-          <div class="service__wrapper">
-            <h3 class="service__title services__options__title">Доставка</h3>
+          <input class="visually-hidden service_delivery" type="radio" name="service" id="service-delivery">
+          <input class="visually-hidden service_guarantee" type="radio" name="service" id="service-guarantee" checked>
+          <input class="visually-hidden service_credit" type="radio" name="service" id="service-credit">
+          <div class="services__list">
+            <label class="services__item" for="service-delivery">Доставка</label>
+            <label class="services__item" for="service-guarantee">Гарантия</label>
+            <label class="services__item" for="service-credit">Кредит</label>
+          </div>
+          <div class="description__delivery">
+            <h3 class="service__title">Доставка</h3>
             <p class="service__description">
               Мы с удовольствием доставим ваш товар прямо <br>
               к вашему подъезду совершенно бесплатно! <br>
@@ -220,10 +224,28 @@
               поднимая его на ваш этаж!
             </p>
           </div>
-          <img class="service__img" src="img/Layer1311.png" alt="Изображение доставки" width="470" height="260">
+          <div class="description__guarantee">
+            <h3 class="service__title">Гарантия</h3>
+            <p class="service__description">
+              Если купленный у нас товар поломается или заискрит,<br>
+              а также в случае пожара, спровоцированного его<br>
+              возгоранием, вы всегда можете быть уверены в нашей<br>
+              гарантии. Мы обменяем сгоревший товар на новый.<br>
+              Дом уж восстановите как-нибудь сами.
+            </p>
+          </div>
+          <div class="description__credit">
+            <h3 class="service__title">Кредит</h3>
+            <p class="service__description">
+              Залезть в долговую яму стало проще!<br>
+              Кредитные консультанты придут вам на помощь.
+            </p>
+            <a class="opening-button" href="#">Отправить заявку</a>
+          </div>
         </div>
       </div>
     </section>
+
     <div class="container column-layout">
       <section class="about">
         <h2 class="section-title dark">Компания «Техномарт»</h2>
